--- a/action.yml
+++ b/action.yml
@@ -6,10 +6,11 @@ inputs:
     default: "."
 runs:
   using: docker
-  image: docker://quay.io/ansible/creator-ee:v0.4.1
+  image: 'Dockerfile'
   entrypoint: /usr/local/bin/ansible-lint
   env:
     GITHUB_ACTIONS: "true"
     GITHUB_WORKFLOW: "{{ github.workflow.name }}"
   args:
+    - -c /config/.ansible-lint
     - ${{ inputs.path }}
